<resources>
    <string name="app_name">Cafe Legend</string>
    <string name="login_btn">Login</string>
    <string name="password_hint">Password (must be alphanumeric)</string>
    <string name="username_hint">Username (5–20 characters)</string>
    <string name="cafe_legend_logo">Cafe Legend Logo</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="nav_items">Items</string>
    <string name="nav_find_us">Find Us</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_home">Home</string>
    <string name="menu">Menu</string>
    <string name="about_us_desc"> \t Legend Group Corp. is one of Indonesia\'s largest restaurant company, operating 50 different restaurants and cafés, in over 1500 locations across the nation.
\n\n \t One of the most developed and famous café they own is Café Legend, located in Jenderal Sudirman Street, SCBD, South Jakarta
    \n\n \t Café Legend brings a touch of artistic style to South Jakarta\'s fashionable neighbourhood that provides a casual but homely ambience for enjoying the comforting flavors of both Western and Asian dishes.
    \n\n \t Café Legend App is a simple mobile app owned by Legend Group Corp. to facilitate the customers in ordering menu at Café Legend.</string>
    <string name="detail_name">Food Name</string>
    <string name="detail_price">Food Price</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="about_us">About Us</string>
    <string name="instagram_logo">Instagram_logo</string>
    <string name="tag_instagram_cafeLegend">\@CaféLegend</string>
    <string name="whatsapp_number">0812–1122–2233</string>
    <string name="address_cafeLegend">Jenderal Sudirman Street Number 15A-C, SCBD, South Jakarta</string>
    <string name="food_recommendation">Today\'s Food Recommendation</string>
    <string name="drink_recommendation">Today\'s Drink Recommendation</string>
    <string name="welcome_message">Welcome, User!</string>
    <string name="prev_button">carousel_previous_button</string>
    <string name="carousel">carousel</string>
    <string name="next_button">carousel_next_button</string>
    <string name="food_image">food image</string>
    <string name="MENU">MENU</string>
</resources>