<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/cream"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_cream"
        android:paddingVertical="7dp"
        android:layout_marginBottom="17dp"
        android:elevation="20dp">
        <Button
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:src="@drawable/logo"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:contentDescription="@string/app_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="207dp"
            android:layout_height="207dp"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cafe_legend_logo"/>
        <TextView
            android:id="@+id/foodName_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/detail_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/brown"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/foodPrice_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/detail_price"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/brown"
            android:layout_marginBottom="7dp"/>
        <TextView
            android:id="@+id/foodDesc_TV"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/description"
            android:textSize="15sp"
            android:textColor="@color/black"/>

    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/quantity_ET"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_quantity_input"
        android:hint="@string/quantity"
        android:autofillHints="@string/quantity"
        android:textAlignment="center"
        android:inputType="number"
        android:textSize="17sp"
        android:paddingHorizontal="7dp"
        android:paddingVertical="5dp"/>
    <TextView
        android:id="@+id/quantity_errorMsg"
        android:layout_width="40dp"
        android:layout_height="16dp"
        android:paddingHorizontal="5dp"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:visibility="gone"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <android.widget.Button
        android:id="@+id/order_btn"
        android:layout_width="186dp"
        android:layout_height="53dp"
        android:background="@drawable/rounded_order_button"
        android:text="@string/order"
        android:textSize="17sp"
        android:textColor="@color/white" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>