<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/cream"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/landing_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/cream"
        android:translationZ="1dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:id="@+id/formInput_LL"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_ET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:textColor="@color/black"
                android:hint="@string/username_hint"
                android:textColorHint="@color/hint"
                android:textSize="17sp"
                android:inputType="text"
                android:layout_marginTop="12dp"
                android:paddingVertical="7dp"
                android:paddingHorizontal="12dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_ic_username"
                android:drawablePadding="7dp"
                android:autofillHints="Username" />
            <TextView
                android:id="@+id/username_errorMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:textColor="@color/red"
                android:visibility="gone"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="17dp">

            <EditText
                android:id="@+id/password_ET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/password_hint"
                android:textColorHint="@color/hint"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:layout_marginTop="12dp"
                android:paddingVertical="7dp"
                android:paddingHorizontal="12dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_ic_password"
                android:drawablePadding="7dp"
                android:autofillHints="Password" />
            <TextView
                android:id="@+id/password_errorMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:textColor="@color/red"
                android:visibility="gone"/>

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/login_btn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/login_btn"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>